--- a/public/css/main.css
+++ b/public/css/main.css
@@ -193,3 +193,22 @@ h1, h2, h3, h4, h5, h6, p ,a{
     font-size: 30px;
     } 
     }
+
+header {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+section {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+#contact { 
+    margin-bottom: 30px;
+}
+
+body {
+     background:url('../images/background5.jpg') no-repeat fixed 50% 50%;
+}
