--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,6 +48,10 @@ body {
 #div1 {
     background:url('../images/background1.jpg') no-repeat center center;
     background-size: cover;
+     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h1, h2, h3, h4, h5, h6, p ,a{
     margin: 0;
@@ -82,9 +86,14 @@ h1, h2, h3, h4, h5, h6, p ,a{
 #background3 {
     background:url('../images/background2.jpg') no-repeat center center;
     background-size: cover;
+    
 }
 #about{
     background:url('../images/background3.jpg') no-repeat center center;
+    background-size: cover;
+     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 #about .text-center{
@@ -137,7 +146,11 @@ h1, h2, h3, h4, h5, h6, p ,a{
 }
 
 #contact {
-    background:url('../images/background4.jpg') no-repeat center center;
+    background:url('../images/background1.jpg') no-repeat center center;
+    background-size: cover;
+     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .full-height{
@@ -200,7 +213,7 @@ header {
     margin-right: 30px;
 }
 
-section {
+section, .menu {
     margin-left: 30px;
     margin-right: 30px;
     
@@ -253,3 +266,10 @@ body {
   width: 100%;
   height: 30px;
 }
+
+.menu {
+    height: 800px;
+    background: #4C4545;
+    opacity: 0.9;
+}
+
