--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,9 +88,11 @@ h1, h2, h3, h4, h5, h6, p ,a{
     background-size: cover;
 }
 #meni {
-    background-color: black;
+    background-color:rgba(76, 69, 70, 0.8);
     background-size: cover;
     overflow: hidden;
+    
+     display:table;
 }
 #about{
     background:url('../images/background3.jpg') no-repeat center center;
@@ -167,6 +169,7 @@ h1, h2, h3, h4, h5, h6, p ,a{
     height: 400px;
 }
 
+
 #footertext {
     color: white;
     font-size: 25px;
@@ -203,13 +206,19 @@ h1, h2, h3, h4, h5, h6, p ,a{
     margin-top: 20%;
     }
     #footer-logo{
-    margin-top: 240px;
+    margin-top: 200px;
         }
+        #map {
+    height: 500px;
+}
+#contact {
+    height: 600px;
+}
     #spoonvertical {
-    margin-top: 310px;
+    margin-top: 260px;
     }
     #footertext {
-    margin-top: 330px;
+    margin-top: 250px;
     font-size: 30px;
     } 
     }
@@ -297,8 +306,15 @@ body {
       cursor: pointer;
 }
 
-.menu-row {
-    margin-top: 80px;
+
+#small-plates {
+    margin-top:80px;
+    margin-bottom: 50px;
+}
+#big-plates {
+    margin-top:80px;
+     margin-bottom: 50px;
+
 }
 
 .description {
@@ -322,4 +338,8 @@ body {
     position:fixed;
     overflow:hidden;
       z-index:1000;
+}
+
+.margin-btm {
+    margin-bottom: 80px;
 }
