--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,21 @@
     url('/fonts/BanglaMN.ttf')  format('truetype'),
     url('/fonts/BanglaMN.svg') format('svg');
 }
+    #loader-wrapper .loader-section {
+        position: fixed;
+        top: 0;
+        height: 100%;
+        left: 30px;
+        right: 30px;
+        background:url('../images/background7.png') no-repeat center center;
+        background-size: cover;
+        z-index: 999;
+        -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: translateX(0);  /* IE 9 */
+        transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
+    }
+
+   
 *{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -195,6 +210,7 @@ h1, h2, h3, h4, h5, h6, p ,a{
     .full-height {
         height: 50vh;
     }
+   
  #textabowspoon {
     margin-top: 220px;
 }
@@ -249,7 +265,7 @@ body {
     background: transparent;
     position: fixed;
     text-align: center;
-    z-index: 999 !important;
+    z-index: 1000 !important;
 }
 
 .full-height { 
@@ -261,7 +277,7 @@ body {
       position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 1000;
   width: 100%;
   height: 30px;
 }
@@ -270,7 +286,7 @@ body {
       position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 999;
+  z-index: 1000;
   width: 100%;
   height: 30px;
 }
@@ -843,15 +859,39 @@ h4, h5 { cursor: default; }
     width: 100%;
     height: 100%;
     z-index: 1000;
+     
 }
+#logotipik {
+    display: block;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
+    text-align: center;
+  
+  
+    
+    z-index: 1001;
+    
+}
+#your_element{
+    position:absolute;
+    left: calc(50% + 200px);
+}
+
 #loader {
     display: block;
     position: relative;
-    left: 50%;
-    top: 50%;
-    width: 150px;
-    height: 150px;
-    margin: -75px 0 0 -75px;
+    left: 0;
+    top: 70%;
+    width: 100px;
+    height: 100px;
+      margin: 0 auto;
+    text-align: center;
+   
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: white;
@@ -917,44 +957,21 @@ h4, h5 { cursor: default; }
         }
     }
 
-    #loader-wrapper .loader-section {
-        position: fixed;
-        top: 0;
-        width: 51%;
-        height: 100%;
-        background: #4C4546;
-        z-index: 1000;
-        -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: translateX(0);  /* IE 9 */
-        transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
-    }
 
-    #loader-wrapper .loader-section.section-left {
-        left: 0;
-    }
 
-    #loader-wrapper .loader-section.section-right {
-        right: 0;
-    }
+   
 
     /* Loaded */
     .loaded #loader-wrapper .loader-section.section-left {
-        -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(-100%);  /* IE 9 */
-                transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
+        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
+            -ms-transform: translateY(-100%);  /* IE 9 */
+                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
 
         -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
                 transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     }
 
-    .loaded #loader-wrapper .loader-section.section-right {
-        -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(100%);  /* IE 9 */
-                transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
 
--webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);  
-        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-    }
     
     .loaded #loader {
         opacity: 0;
@@ -963,11 +980,9 @@ h4, h5 { cursor: default; }
     }
     .loaded #loader-wrapper {
         visibility: hidden;
-
-        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateY(-100%);  /* IE 9 */
-                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
-
-        -webkit-transition: all 0.3s 1s ease-out;  
-                transition: all 0.3s 1s ease-out;
+    }
+    .loaded #logotipik {
+             opacity: 0;
+        -webkit-transition: all 0.3s ease-out;  
+                transition: all 0.3s ease-out;
     }
