--- a/public/css/main.css
+++ b/public/css/main.css
@@ -169,12 +169,18 @@ h1, h2, h3, h4, h5, h6, p ,a{
 }
 .full-height{
     height: 800px;
+    
 }
 .full-height-2 {
     height: 1400px;
+    
 }
 .half-height{
     height: 400px;
+    
+}
+.full-height , .half-height , .full-height-2 , #meni , #gallery {
+display: none;
 }
 
 
@@ -986,3 +992,7 @@ h4, h5 { cursor: default; }
         -webkit-transition: all 0.3s ease-out;  
                 transition: all 0.3s ease-out;
     }
+
+    .loaded .full-height , .half-height , .full-height-2 , #meni , #gallery {
+display: block;
+}
