--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,6 +63,7 @@ body {
 #div1 {
     background:url('../images/background1.jpg') no-repeat center center;
     background-size: cover;
+    display:none;
 }
 h1, h2, h3, h4, h5, h6, p ,a{
     margin: 0;
@@ -97,6 +98,7 @@ h1, h2, h3, h4, h5, h6, p ,a{
 #background3 {
     background:url('../images/background2.jpg') no-repeat center center;
     background-size: cover;
+    display: none;
 }
 #meni {
     background-color:rgba(76, 69, 70, 0.8);
@@ -108,6 +110,7 @@ h1, h2, h3, h4, h5, h6, p ,a{
 #about{
     background:url('../images/background3.jpg') no-repeat center center;
     background-size: cover;
+    display: none;
 }
 #textabowspoon {
     margin-top: 180px;
@@ -149,11 +152,13 @@ h1, h2, h3, h4, h5, h6, p ,a{
 }
 #map {
     height: 400px;
+    display:none;
 }
 
 #contact {
     background:url('../images/background6.jpg') no-repeat center center;
     background-size: cover;
+    display: none;
 
 }
 .full-height{
@@ -983,9 +988,8 @@ h4, h5 { cursor: default; }
         display:table;
     }
 
-    .loaded .half-height , .full-height , .full-height-2 , #gallery {
+    .loaded .half-height , .full-height , .full-height-2 , #gallery , #div1 , #about , #contact , #map , #background3 {
         display: block
     }
-
 
 
