--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,7 @@ body {
 #logo { 
     margin: 70px auto 0;
   width: 40%;
+  display: none;
     
     -webkit-transform-origin: 50% 0;
     transform-origin: 50% 0;
@@ -833,6 +834,10 @@ h4, h5 { cursor: default; }
 #text {
     width: 50%;
 }
+#istoknatpis {
+    width: 50%;
+    display:none;
+}
 
 #headertext3 {
     margin-top: 30px;
@@ -988,8 +993,10 @@ h4, h5 { cursor: default; }
         display:table;
     }
 
-    .loaded .half-height , .full-height , .full-height-2 , #gallery , #div1 , #about , #contact , #map , #background3 {
-        display: block
+    .loaded .half-height , #istoknatpis .full-height , .full-height-2 , #logo , #gallery , #div1 , #about , #contact , #map , #background3 {
+        display: block;
     }
 
-
+    .loaded #istoknatpis {
+        display: inline;
+    }
