--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,8 +18,24 @@
         -ms-transform: translateX(0);  /* IE 9 */
         transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
     }
-
-   
+#empty-space-btm {
+     background:url('../images/background5.png') repeat fixed;
+      position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 30px;
+}
+#empty-space {
+       top: 0;
+    width: 100%;
+    height: 30px;
+    background: transparent;
+    position: fixed;
+    text-align: center;
+    z-index: 1000 !important;
+}
 *{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -32,10 +48,15 @@ body {
     background: #272727;
 }
 
+
+body {
+     background:url('../images/background5.png') repeat fixed;
+     
+}
+
 #logo { 
     margin: 70px auto 0;
   width: 40%;
-  display: none;
     
     -webkit-transform-origin: 50% 0;
     transform-origin: 50% 0;
@@ -64,7 +85,6 @@ body {
 #div1 {
     background:url('../images/background1.jpg') no-repeat center center;
     background-size: cover;
-    display:none;
 }
 h1, h2, h3, h4, h5, h6, p ,a{
     margin: 0;
@@ -99,19 +119,17 @@ h1, h2, h3, h4, h5, h6, p ,a{
 #background3 {
     background:url('../images/background2.jpg') no-repeat center center;
     background-size: cover;
-    display: none;
 }
 #meni {
     background-color:rgba(76, 69, 70, 0.8);
     background-size: cover;
     overflow: hidden;
-    display: none;
+    display: table;
      
 }
 #about{
     background:url('../images/background3.jpg') no-repeat center center;
     background-size: cover;
-    display: none;
 }
 #textabowspoon {
     margin-top: 180px;
@@ -124,8 +142,8 @@ h1, h2, h3, h4, h5, h6, p ,a{
 #textbelowspoon {
     margin-top: 100px;
 }
-#istoktextsize {
-    
+#istoknatpis {
+    width: 50%;
 }
 #spoonvertical {
     margin: 90px auto 0;
@@ -153,14 +171,15 @@ h1, h2, h3, h4, h5, h6, p ,a{
 }
 #map {
     height: 400px;
-    display:none;
 }
 
 #contact {
     background:url('../images/background6.jpg') no-repeat center center;
     background-size: cover;
-    display: none;
-
+     background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .full-height{
     height: 800px;
@@ -243,12 +262,6 @@ section, .menu {
     
 }
 
-
-
-body {
-     background:url('../images/background5.png') repeat fixed;
-     
-}
 
 @media screen and (max-width: 990px) {
     body {
@@ -834,10 +847,6 @@ h4, h5 { cursor: default; }
 #text {
     width: 50%;
 }
-#istoknatpis {
-    width: 50%;
-    display:none;
-}
 
 #headertext3 {
     margin-top: 30px;
@@ -989,14 +998,6 @@ h4, h5 { cursor: default; }
                 transition: all 0.3s ease-out;
     }
 
-    .loaded #meni {
-        display:table;
-    }
 
-    .loaded .half-height , #istoknatpis .full-height , .full-height-2 , #logo , #gallery , #div1 , #about , #contact , #map , #background3 {
-        display: block;
-    }
 
-    .loaded #istoknatpis {
-        display: inline;
-    }
+  
