--- a/public/css/main.css
+++ b/public/css/main.css
@@ -998,6 +998,10 @@ h4, h5 { cursor: default; }
                 transition: all 0.3s ease-out;
     }
 
+#logo {
+content:url('../images/logo1.png');
+}
 
-
-  
+#istoknatpis {
+content:url('../images/istok.png');
+}
