--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1021,3 +1021,13 @@ h4, h5 { cursor: default; }
 .vertical-images { 
     width: 250px;
 }
+
+.reservation-link:hover {
+    color: white;
+}
+
+.reservation-link {
+    border: 1px solid white;
+    padding: 5px 6px 0px 6px; 
+    font-size: 15px;
+}
